# the-crew-2

./: .gitignore  CLAUDE.md  README.md  delete_reports.py  delete_reports.sh  env.example  project_summary.md  pyproject.toml  user_preference.txt
.windsurf/rules/: mcp.md
src/crewai_data_analyst/: __init__.py  app.py  crew.py  main.py
src/crewai_data_analyst/config/: agents.yaml  tasks.yaml
src/crewai_data_analyst/tools/: __init__.py  custom_tool.py
